class for footer & fixed alignment of more information text

--- a/css/design.css
+++ b/css/design.css
@@ -196,11 +196,8 @@ h2
 	text-transform: uppercase;
 	font-size: 4em;
 	text-align: center;
-	padding-left: 25%;
-	padding-right: 25%
 }
-p
-	{
+footer{
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -209,11 +206,15 @@ p
 	margin: auto;
 	background-color: #000000;
 	color: #FFFFFF;
+
 }
-h3
-{
+
+
+
+.moreInfo{
 	background-color: #FFFFFF;
-	max-width: 42.7em;
+	max-width: 50em;
+	height: 3em;
 	margin: auto;
 	display: flex;
 	align-items: center;
